--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,9 @@
 name: Release Unity Package
 
 on:
-  workflow_run:
-    workflows:
-      - "Update package.json"
-    types:
-      - completed
+  push:
+    tags:
+      - v*
 
 env:
   FILE_NAME: "SpreadSheetMaster"
@@ -54,12 +52,6 @@ jobs:
             echo "Great, all .meta files are commited."
           fi
         working-directory: Assets
-      # Versioning
-      - name: Bump version and push tag
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v5.5
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
       # Create Release
       - name: Create Release
         id: create_release
@@ -74,12 +66,12 @@ jobs:
           prerelease: false
       # Upload Assets
       - name: Upload Release Asset
-        id: upload-release-asset 
+        id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} 
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: build/${{ env.FILE_NAME }}.unitypackage
           asset_name: ${{ env.FILE_NAME }}_${{ steps.tag_version.outputs.new_tag }}.unitypackage
           asset_content_type: application/zip
